# learning

./: 2025-02-14-logging-howtoâ¶.md  README.md  chromedevtoolsmcp.md  concurrency.ipynb  data_transfer_object.md  decorators.ipynb  logging.conf  logging.ipynb  openai.ipynb  pydantic.ipynb  pyproject.toml  scrapper.ipynb  script.py  segmentation.ipynb  sqlalchemy.ipynb  sqlmodel.ipynb
.devcontainer/: devcontainer.json
.gradio/flagged/: dataset1.csv
gradio/: gradio.ipynb
huggingface/: TODO.MD  notebook.ipynb
inspect/: inspect.ipynb
openai/: openai.ipynb
segmentation/: segmentation.ipynb
sqlmodel/: database.db  database_2.db  models.py  my_project.sqbpro  sqlmodel.ipynb
uv/: uv.ipynb
