[project]
name = "learning"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pydot>=3.0.4",
    "pysqlite3>=0.5.4",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
segmentation = [
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pydot>=3.0.4",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.18.0",
]
sqlmodel = [
    "sqlmodel>=0.0.22",
]
