[project]
name = "learning"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pydot>=3.0.4",
    "pysqlite3>=0.5.4",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
gradio = [
    "gradio>=5.20.0",
    "tf-keras>=2.18.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
]
segmentation = [
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pydot>=3.0.4",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.18.0",
]
sqlmodel = [
    "sqlmodel>=0.0.22",
]
