[project]
name = "learning"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "einops>=0.8.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "mamba-ssm>=2.2.4",
    "mambavision>=1.1.0",
    "matplotlib>=3.10.0",
    "numpy>=2.0.2",
    "pydot>=3.0.4",
    "pysqlite3>=0.5.4",
    "sentencepiece>=0.2.0",
    "sqlalchemy>=2.0.38",
    "tiktoken>=0.9.0",
    "timm>=1.0.15",
    "transformers>=4.49.0",
]

[dependency-groups]
gradio = [
    "gradio>=5.20.0",
    "tf-keras>=2.18.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
]
openai = [
    "dotenv>=0.9.9",
    "openai>=1.65.5",
]
segmentation = [
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pydot>=3.0.4",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.18.0",
]
sqlmodel = [
    "sqlmodel>=0.0.22",
]
